--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,7 +1,9 @@
 /*
 * CSS File for Funbox task
-* (c) Anufriy Efremov, 13.03.2019
+* (c) Anufriy Efremov, 13.03.2019 v.1.2
 */
+$font1 : 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 @font-face {
     font-family: "Exo";
     src: url("../fonts/Exo2.0-Thin.otf") format("opentype");
@@ -13,7 +15,7 @@ body {
 }
 
 /* 
-* Main mini card's (good's) class
+* Main mini card's (good's) class 
 */
  .mini-card {
     background: url('../img/mini-card.svg');
@@ -36,14 +38,14 @@ body {
  /* Slogan above a name */
  .mini-card .good_slog {
      color: #666666;
-     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+     font-family: $font1;
      font-size: 16px;
  }
  
  /* Name of good */
  .mini-card .good_name {
     color: #000000;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font1;
     font-size: 48px;
     font-weight: bold;
     line-height: 60px;
@@ -52,7 +54,7 @@ body {
 /* Short desc */
 .mini-card .with_content {
     color: #000000;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font1;
     font-size: 24px;
     font-weight: bold;
     line-height: 21px;
@@ -61,7 +63,7 @@ body {
 /* Additional text */
 .mini-card .with_addit {
     color: #666666;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font1;
     font-size: 14px;
     line-height: 16px;
     margin-top: 17px;
@@ -69,7 +71,7 @@ body {
 
 /* Image of a good */
 .mini-card .good_image{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font1;
     position: absolute;
     bottom: 0px;
     left: 4px;
@@ -78,7 +80,7 @@ body {
 
 /* Cirlcle with a weight of food */
 .mini-card .good_wt {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font1;
     position: absolute;
     height: 81px;
     width: 81px;
@@ -108,7 +110,7 @@ body {
 
 /* Desc under a mini-card */
 .good_under {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font1;
     position: absolute;
     bottom: -31px;
     font-size: 13px;
